--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"@azure/cognitiveservices-computervision": "^8.2.0",
+		"@azure/ms-rest-azure-js": "^2.1.0",
 		"@azure/storage-blob": "^12.27.0",
 		"openai": "^5.8.2",
 		"request": "^2.88.2",
